2003-08-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: epiphany has been branched.

2003-08-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: yelp has been branched.

2003-08-26  Carlos Perelló Marín <carlos@gnome.org>

	* translation-status.xml: Updated libgda/libgnomedb branch information

2003-08-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-office.

2003-08-23  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Added scaffold (former anjuta2)

2003-08-23  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix glimmer branch.

2003-08-20  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Remove metatheme, its functionality has
	already been superseded by newer control center.

2003-08-17  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix gal,gtkhtml,drgeo pot file name.

2003-08-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gal has been branched.

2003-08-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ggv has been branched.

2003-08-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: nautilus-cd-burner has been branched.

2003-08-11  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: GNOME Games has been branched. Reflect that.

2003-08-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Totem is not in the desktop any
	longer, at least for 2.4.

2003-08-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed gnomemeeting branch.

2003-08-03  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fix gimp-gap and gnome-spell pot name.

2003-07-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed monkey-media, maintainer says
	it's moved into rhythmbox now.

2003-07-31  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed gnopernicus pot file name.
