@@ -1823,6 +1823,17 @@
       </component>
     </version>
   </module>
+  <module name="openoffice">
+    <version release="gnome-2.4">
+      <component name="openoffice" dir="openoffice" group="extras">
+        <podir dir="po"/>
+        <potname name="ooo-build.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="pan">
     <version release="gnome-2.4">
       <component name="pan" dir="pan" group="fifth-toe">
