@@ -1,3 +1,7 @@
+2003-08-30  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added the openoffice module.
+
 2003-08-28  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: epiphany has been branched.
